--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
   },
   "private": true,
   "workspaces": ["src/addons/*"],
-  "addons": ["@eeacms/volto-eea-kitkat"],
+  "addons": [
+    "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-eea-design-system"
+  ],
   "jest": {
     "modulePathIgnorePatterns": [
       "api"
@@ -138,7 +141,8 @@
   },
   "dependencies": {
     "@plone/volto": "14.8.1",
-    "@eeacms/volto-eea-kitkat": "*"
+    "@eeacms/volto-eea-kitkat": "*",
+    "@eeacms/volto-eea-design-system": "*"
 },
   "devDependencies": {
     "eslint-plugin-prettier": "3.1.3",
