--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.0.3",
   "scripts": {
     "start": "razzle start",
-    "preinstall": "if [ -f $(pwd)/mrs.developer.json ]; then if [ -f $(pwd)/node_modules/.bin/missdev ]; then yarn develop; else yarn develop:npx; fi; fi",
     "postinstall": "yarn omelette && yarn patches",
     "omelette": "ln -sf node_modules/@plone/volto/ omelette",
     "patches": "/bin/bash patches/patchit.sh > /dev/null 2>&1 ||true",
@@ -23,9 +22,9 @@
     "cypress:run": "NODE_ENV=test cypress run",
     "cypress:open": "NODE_ENV=test cypress open",
     "cypress:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn start",
-		"cypress:test-acceptance-server": "make test-acceptance-server",
-		"cy:test:fixture:setup": "node cypress/support/reset-fixture.js",
-		"cy:test:fixture:teardown": "node cypress/support/reset-fixture.js teardown",
+    "cypress:test-acceptance-server": "make test-acceptance-server",
+    "cy:test:fixture:setup": "node cypress/support/reset-fixture.js",
+    "cy:test:fixture:teardown": "node cypress/support/reset-fixture.js teardown",
     "ci:start-backend": "make start-test-backend",
     "ci:start-frontend": "RAZZLE_API_PATH=http://localhost:55001/plone yarn build && start-test start:prod http-get://localhost:3000 cypress:run",
     "ci:cypress:run": "start-test ci:start-backend http-get://localhost:55001/plone ci:start-frontend",
@@ -37,7 +36,9 @@
     "build-storybook": "build-storybook"
   },
   "private": true,
-  "workspaces": ["src/addons/*"],
+  "workspaces": [
+    "src/addons/*"
+  ],
   "addons": [
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-eea-design-system"
@@ -140,21 +141,21 @@
     "node": "^12 || ^14 || ^16"
   },
   "dependencies": {
-    "@plone/volto": "14.8.1",
+    "@eeacms/volto-eea-design-system": "*",
     "@eeacms/volto-eea-kitkat": "*",
-    "@eeacms/volto-eea-design-system": "*"
-},
+    "@plone/volto": "14.10.0"
+  },
   "devDependencies": {
-    "eslint-plugin-prettier": "3.1.3",
-    "jest-junit": "8.0.0",
-    "mrs-developer": "*",
-    "postcss": "8.3.11",
-    "prettier": "2.0.5",
     "@storybook/addon-actions": "^6.3.0",
     "@storybook/addon-controls": "6.3.0",
     "@storybook/addon-essentials": "^6.3.0",
     "@storybook/addon-links": "^6.3.0",
     "@storybook/react": "^6.3.0",
+    "eslint-plugin-prettier": "3.1.3",
+    "jest-junit": "8.0.0",
+    "mrs-developer": "*",
+    "postcss": "8.3.11",
+    "prettier": "2.0.5",
     "stylelint": "14.0.1",
     "stylelint-config-idiomatic-order": "8.1.0",
     "stylelint-config-prettier": "8.0.1",
