--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   ],
   "addons": [
     "@eeacms/volto-eea-kitkat",
-    "@eeacms/volto-eea-design-system"
+    "@eeacms/volto-eea-design-system",
+    "@eeacms/volto-eea-website-theme"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -142,6 +143,7 @@
   },
   "dependencies": {
     "@eeacms/volto-eea-design-system": "*",
+    "@eeacms/volto-eea-website-theme": "*",
     "@eeacms/volto-eea-kitkat": "*",
     "@plone/volto": "14.10.0"
   },
