import design system theme

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,13 @@
 {
     "compilerOptions": {
-        "paths": {},
+        "paths": {
+            "@eeacms/volto-eea-design-system": [
+                "addons/volto-eea-design-system/src"
+            ],
+            "@eeacms/volto-eea-website-theme": [
+                "addons/volto-eea-website-theme/src"
+            ]
+        },
         "baseUrl": "src"
     }
 }
