--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,9 @@
             ],
             "@eeacms/volto-eea-website-theme": [
                 "addons/volto-eea-website-theme/src"
+            ],
+            "@eeacms/volto-eea-website-policy": [
+                "addons/volto-eea-website-policy/src"
             ]
         },
         "baseUrl": "src"
