--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "addons": [
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-eea-design-system",
-    "@eeacms/volto-eea-website-theme"
+    "@eeacms/volto-eea-website-theme",
+    "@eeacms/volto-eea-website-policy"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -144,6 +145,7 @@
   "dependencies": {
     "@eeacms/volto-eea-design-system": "*",
     "@eeacms/volto-eea-website-theme": "*",
+    "@eeacms/volto-eea-website-policy": "*",
     "@eeacms/volto-eea-kitkat": "*",
     "@plone/volto": "14.10.0"
   },
