--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,7 @@ output.xml
 report.html
 selenium-screenshot-*.png
 /selenium/
-cypress/videos/
+cypress/
 cypress/screenshots
 
 # Local environment setup
