--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
   "addons": [
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-eea-design-system",
-    "@eeacms/volto-eea-website-theme"
+    "@eeacms/volto-eea-website-theme",
+    "@eeacms/volto-eea-website-policy"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -144,6 +145,7 @@
   "dependencies": {
     "@eeacms/volto-eea-design-system": "1.4.0",
     "@eeacms/volto-eea-website-theme": "0.1.3",
+    "@eeacms/volto-eea-website-policy": "0.1.1",
     "@eeacms/volto-eea-kitkat": "5.2.2",
     "@plone/volto": "14.10.0"
   },
