--- a/package.json
+++ b/package.json
@@ -142,9 +142,9 @@
     "node": "^12 || ^14 || ^16"
   },
   "dependencies": {
-    "@eeacms/volto-eea-design-system": "*",
-    "@eeacms/volto-eea-website-theme": "*",
-    "@eeacms/volto-eea-kitkat": "*",
+    "@eeacms/volto-eea-design-system": "1.4.0",
+    "@eeacms/volto-eea-website-theme": "0.1.3",
+    "@eeacms/volto-eea-kitkat": "5.2.3",
     "@plone/volto": "14.10.0"
   },
   "devDependencies": {
