--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-blockquote",
     "@eeacms/volto-statistic-block",
+    "@eeacms/volto-timeline-block",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy"
@@ -157,6 +158,7 @@
     "@eeacms/volto-eea-website-policy": "0.2.1",
     "@eeacms/volto-eea-website-theme": "0.5.0",
     "@eeacms/volto-statistic-block": "0.1.1",
+    "@eeacms/volto-timeline-block": "0.2.0",
     "@plone/volto": "15.2.2"
   },
   "devDependencies": {
