--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "addons": [
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-blockquote",
+    "@eeacms/volto-progress-block",
     "@eeacms/volto-statistic-block",
     "@eeacms/volto-timeline-block",
     "@eeacms/volto-eea-design-system",
@@ -157,6 +158,7 @@
     "@eeacms/volto-eea-kitkat": "5.2.8",
     "@eeacms/volto-eea-website-policy": "0.2.1",
     "@eeacms/volto-eea-website-theme": "0.5.0",
+    "@eeacms/volto-progress-block": "0.2.0",
     "@eeacms/volto-statistic-block": "0.1.1",
     "@eeacms/volto-timeline-block": "0.2.0",
     "@plone/volto": "15.2.2"
