Add @eeacms/volto-slate-label 0.2.0

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -102,6 +102,9 @@
             ],
             "@eeacms/volto-progress-block": [
                 "addons/volto-progress-block/src"
+            ],
+            "@eeacms/volto-slate-label": [
+                "addons/volto-slate-label/src"
             ]
         },
         "baseUrl": "src"
