--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@eeacms/volto-progress-block",
     "@eeacms/volto-statistic-block",
     "@eeacms/volto-timeline-block",
+    "@eeacms/volto-slate-label",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy"
@@ -161,6 +162,7 @@
     "@eeacms/volto-progress-block": "0.2.0",
     "@eeacms/volto-statistic-block": "0.1.1",
     "@eeacms/volto-timeline-block": "0.2.0",
+    "@eeacms/volto-slate-label": "0.2.0",
     "@plone/volto": "15.2.2"
   },
   "devDependencies": {
