Add @eeacms/volto-tags-block 0.2.0

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -105,6 +105,9 @@
             ],
             "@eeacms/volto-slate-label": [
                 "addons/volto-slate-label/src"
+            ],
+            "@eeacms/volto-tags-block": [
+                "addons/volto-tags-block/src"
             ]
         },
         "baseUrl": "src"
