--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@eeacms/volto-tags-block",
     "@eeacms/volto-timeline-block",
     "@eeacms/volto-slate-label",
+    "@eeacms/volto-description-block",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy"
@@ -165,6 +166,7 @@
     "@eeacms/volto-statistic-block": "0.1.1",
     "@eeacms/volto-tags-block": "0.2.0",
     "@eeacms/volto-timeline-block": "0.2.1",
+    "@eeacms/volto-description-block": "0.1.2",
     "@plone/volto": "15.4.1"
   },
   "devDependencies": {
