--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     "@eeacms/volto-description-block",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
-    "@eeacms/volto-eea-website-policy"
+    "@eeacms/volto-eea-website-policy",
+    "@eeacms/volto-searchlib",
+    "@eeacms/volto-globalsearch",
+    "@eeacms/volto-datahub"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
