--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
     "@eeacms/volto-statistic-block": "0.1.1",
     "@eeacms/volto-tags-block": "0.2.2",
     "@eeacms/volto-timeline-block": "0.2.1",
-    "@plone/volto": "15.11.0"
+    "@plone/volto": "16.0.0-alpha.5"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.0",
