--- a/jsconfig.json
+++ b/jsconfig.json
@@ -108,6 +108,9 @@
             ],
             "@eeacms/volto-description-block": [
                 "addons/volto-description-block/src"
+            ],
+            "@eeacms/volto-call-to-action-block": [
+                "addons/volto-call-to-action-block/src"
             ]
         },
         "baseUrl": "src"
