--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@eeacms/volto-timeline-block",
     "@eeacms/volto-slate-label",
     "@eeacms/volto-description-block",
+    "@eeacms/volto-call-to-action-block",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy"
@@ -155,6 +156,7 @@
     "node": "^12 || ^14 || ^16"
   },
   "dependencies": {
+    "@eeacms/volto-call-to-action-block": "0.1.0",
     "@eeacms/volto-description-block": "0.3.0",
     "@eeacms/volto-eea-design-system": "0.3.1",
     "@eeacms/volto-eea-kitkat": "6.0.0",
