--- a/jsconfig.json
+++ b/jsconfig.json
@@ -111,6 +111,9 @@
             ],
             "@eeacms/volto-call-to-action-block": [
                 "addons/volto-call-to-action-block/src"
+            ],
+            "@eeacms/volto-cards-block": [
+                "addons/volto-cards-block/src"
             ]
         },
         "baseUrl": "src"
