--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@eeacms/volto-slate-label",
     "@eeacms/volto-description-block",
     "@eeacms/volto-call-to-action-block",
+    "@eeacms/volto-cards-block",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy"
@@ -157,6 +158,7 @@
   },
   "dependencies": {
     "@eeacms/volto-call-to-action-block": "0.2.0",
+    "@eeacms/volto-cards-block": "0.1.1",
     "@eeacms/volto-description-block": "0.3.0",
     "@eeacms/volto-eea-design-system": "0.3.1",
     "@eeacms/volto-eea-kitkat": "6.0.0",
