--- a/jsconfig.json
+++ b/jsconfig.json
@@ -67,6 +67,9 @@
             "@eeacms/volto-tabs-block": [
                 "addons/volto-tabs-block/src"
             ],
+            "@eeacms/volto-block-image-cards": [
+                "addons/volto-block-image-cards/src"
+            ],
             "@eeacms/volto-banner": [
                 "addons/volto-banner/src"
             ],
@@ -111,9 +114,6 @@
             ],
             "@eeacms/volto-searchlib": [
                 "addons/volto-searchlib/src"
-            ],
-            "@eeacms/search": [
-                "addons/eeacms-searchlib/src"
             ],
             "@eeacms/volto-datahub": [
                 "addons/volto-datahub/src"
