--- a/jsconfig.json
+++ b/jsconfig.json
@@ -67,6 +67,9 @@
             "@eeacms/volto-tabs-block": [
                 "addons/volto-tabs-block/src"
             ],
+            "@eeacms/volto-block-image-cards": [
+                "addons/volto-block-image-cards/src"
+            ],
             "@eeacms/volto-banner": [
                 "addons/volto-banner/src"
             ],
