--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "react-select": "4.3.1"
   },
   "dependencies": {
+    "@eeacms/search": "file:.yalc/@eeacms/search",
     "@eeacms/volto-description-block": "0.3.0",
     "@eeacms/volto-eea-design-system": "0.3.1",
     "@eeacms/volto-eea-kitkat": "6.0.0",
