--- a/jsconfig.json
+++ b/jsconfig.json
@@ -31,9 +31,6 @@
             "@eeacms/volto-widget-geolocation": [
                 "addons/volto-widget-geolocation/src"
             ],
-            "volto-slate": [
-                "addons/volto-slate/src"
-            ],
             "@eeacms/volto-slate-metadata-mentions": [
                 "addons/volto-slate-metadata-mentions/src"
             ],
@@ -120,6 +117,12 @@
             ],
             "@eeacms/volto-globalsearch": [
                 "addons/volto-globalsearch/src"
+            ],
+            "volto-slate": [
+                "addons/volto-slate/src"
+            ],
+            "@eeacms/search": [
+                "addons/eeacms-searchlib/src"
             ]
         },
         "baseUrl": "src"
