--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,9 @@
 {
     "compilerOptions": {
         "paths": {
+            "volto-slate": [
+                "addons/volto-slate/src"
+            ],
             "@eeacms/volto-matomo": [
                 "addons/volto-matomo/src"
             ],
@@ -109,11 +112,14 @@
             "@eeacms/volto-call-to-action-block": [
                 "addons/volto-call-to-action-block/src"
             ],
+            "@eeacms/volto-searchlib": [
+                "addons/volto-searchlib/src"
+            ],
+            "@eeacms/volto-datahub": [
+                "addons/volto-datahub/src"
+            ],
             "@eeacms/volto-globalsearch": [
                 "addons/volto-globalsearch/src"
-            ],
-            "volto-slate": [
-                "addons/volto-slate/src"
             ]
         },
         "baseUrl": "src"
