--- a/package.json
+++ b/package.json
@@ -163,12 +163,15 @@
   },
   "dependencies": {
     "@eeacms/volto-call-to-action-block": "0.2.2",
+    "@eeacms/volto-datahub": "0.1.1",
     "@eeacms/volto-description-block": "0.3.0",
     "@eeacms/volto-eea-design-system": "0.4.5",
     "@eeacms/volto-eea-kitkat": "6.0.4",
     "@eeacms/volto-eea-website-policy": "0.2.2",
     "@eeacms/volto-eea-website-theme": "0.6.6",
+    "@eeacms/volto-globalsearch": "0.1.3",
     "@eeacms/volto-quote-block": "0.3.0",
+    "@eeacms/volto-searchlib": "0.3.2",
     "@eeacms/volto-slate-label": "0.2.2",
     "@eeacms/volto-statistic-block": "0.1.2",
     "@eeacms/volto-tags-block": "0.2.3",
