--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
     "@eeacms/volto-eea-kitkat": "6.0.4",
     "@eeacms/volto-eea-website-policy": "0.2.3",
     "@eeacms/volto-eea-website-theme": "0.6.7",
+    "@eeacms/volto-hero-block": "0.1.0",
     "@eeacms/volto-quote-block": "0.3.1",
     "@eeacms/volto-slate-label": "0.2.2",
     "@eeacms/volto-statistic-block": "0.1.2",
