--- a/package.json
+++ b/package.json
@@ -56,12 +56,12 @@
     "@eeacms/volto-hero-block",
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-slate-label",
-    "@eeacms/volto-eea-design-system",
-    "@eeacms/volto-eea-website-theme",
-    "@eeacms/volto-eea-website-policy",
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
-    "@eeacms/volto-datahub"
+    "@eeacms/volto-datahub",
+    "@eeacms/volto-eea-design-system",
+    "@eeacms/volto-eea-website-theme",
+    "@eeacms/volto-eea-website-policy"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
