--- a/package.json
+++ b/package.json
@@ -56,6 +56,9 @@
     "@eeacms/volto-hero-block",
     "@eeacms/volto-eea-kitkat",
     "@eeacms/volto-slate-label",
+    "@eeacms/volto-searchlib",
+    "@eeacms/volto-globalsearch",
+    "@eeacms/volto-datahub",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy"
@@ -157,9 +160,16 @@
   "engines": {
     "node": "^12 || ^14 || ^16"
   },
+  "resolutions": {
+    "react-select": "4.3.1"
+  },
   "dependencies": {
+    "@eeacms/search": "0.2.11",
     "@eeacms/volto-call-to-action-block": "0.2.2",
+    "@eeacms/volto-datahub": "0.1.1",
     "@eeacms/volto-description-block": "0.3.0",
+    "@eeacms/volto-globalsearch": "0.1.3",
+    "@eeacms/volto-searchlib": "0.3.3",
     "@eeacms/volto-eea-design-system": "0.5.0",
     "@eeacms/volto-eea-kitkat": "6.1.1",
     "@eeacms/volto-eea-website-policy": "0.2.3",
