--- a/jsconfig.json
+++ b/jsconfig.json
@@ -118,6 +118,9 @@
             "@eeacms/volto-searchlib": [
                 "addons/volto-searchlib/src"
             ],
+            "@eeacms/search": [
+                "addons/eeacms-searchlib/src"
+            ],
             "@eeacms/volto-datahub": [
                 "addons/volto-datahub/src"
             ],
