--- a/package.json
+++ b/package.json
@@ -162,8 +162,7 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "react-select": "4.3.1",
-    "@eeacms/volto-listing-block": "0.5.0"
+    "react-select": "4.3.1"
   },
   "dependencies": {
     "@eeacms/search": "0.2.28",
@@ -176,7 +175,6 @@
     "@eeacms/volto-eea-website-theme": "0.7.3",
     "@eeacms/volto-globalsearch": "0.1.6",
     "@eeacms/volto-hero-block": "0.2.0",
-    "@eeacms/volto-listing-block": "0.5.0",
     "@eeacms/volto-quote-block": "0.3.3",
     "@eeacms/volto-searchlib": "0.3.16",
     "@eeacms/volto-slate-label": "0.2.3",
