--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.1",
     "react-select": "4.3.1"
   },
   "dependencies": {
@@ -169,7 +170,7 @@
     "@eeacms/volto-call-to-action-block": "0.2.4",
     "@eeacms/volto-datahub": "0.1.12",
     "@eeacms/volto-description-block": "0.3.1",
-    "@eeacms/volto-eea-design-system": "0.9.5",
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.1",
     "@eeacms/volto-eea-kitkat": "8.2.3",
     "@eeacms/volto-eea-website-policy": "0.4.2",
     "@eeacms/volto-eea-website-theme": "0.7.7",
