--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
   },
   "resolutions": {
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.1",
+    "@eeacms/volto-tabs-block": "2.2.1",
     "react-select": "4.3.1"
   },
   "dependencies": {
@@ -181,6 +182,7 @@
     "@eeacms/volto-slate-label": "0.3.0",
     "@eeacms/volto-statistic-block": "0.3.0",
     "@eeacms/volto-tags-block": "0.2.4",
+    "@eeacms/volto-tabs-block": "2.2.1",
     "@eeacms/volto-timeline-block": "0.2.3",
     "@eeacms/volto-workflow-progress": "2.3.14",
     "@kitconcept/volto-blocks-grid": "3.1.0",
