--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "postinstall": "yarn omelette && yarn patches",
     "omelette": "if [ ! -d omelette ]; then ln -sf node_modules/@plone/volto omelette; fi",
     "patches": "/bin/bash patches/patchit.sh > /dev/null 2>&1 ||true",
-    "build": "razzle build",
+    "build": "razzle build --noninteractive",
     "lint": "./node_modules/eslint/bin/eslint.js 'src/**/*.{js,jsx}'",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix 'src/**/*.{js,jsx}'",
     "lint:ci": "./node_modules/eslint/bin/eslint.js -f checkstyle 'src/**/*.{js,jsx}' > eslint.xml",
@@ -172,7 +172,7 @@
     "@eeacms/volto-datahub": "0.1.12",
     "@eeacms/volto-description-block": "0.3.1",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.1",
-    "@eeacms/volto-eea-kitkat": "8.2.4",
+    "@eeacms/volto-eea-kitkat": "9.0.0",
     "@eeacms/volto-eea-website-policy": "0.4.2",
     "@eeacms/volto-eea-website-theme": "0.7.7",
     "@eeacms/volto-globalsearch": "0.1.7",
@@ -186,7 +186,7 @@
     "@eeacms/volto-timeline-block": "0.2.3",
     "@eeacms/volto-workflow-progress": "2.3.14",
     "@kitconcept/volto-blocks-grid": "3.1.0",
-    "@plone/volto": "16.0.0-alpha.12"
+    "@plone/volto": "16.0.0-alpha.45"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.0",
