--- a/.gitignore
+++ b/.gitignore
@@ -66,7 +66,6 @@ report.html
 selenium-screenshot-*.png
 /selenium/
 cypress/
-cypress/screenshots
 
 # Local environment setup
 .env
@@ -75,8 +74,11 @@ cypress/screenshots
 .env.test.local
 .env.production.local
 
+# generic
 data
 omelette
 
+# build
 public/critical.css
 src/addons/*
+/cache
