--- a/package.json
+++ b/package.json
@@ -170,7 +170,7 @@
     "@eeacms/volto-datahub": "0.1.12",
     "@eeacms/volto-description-block": "1.0.0",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.1",
-    "@eeacms/volto-eea-kitkat": "9.0.0",
+    "@eeacms/volto-eea-kitkat": "*",
     "@eeacms/volto-eea-website-policy": "1.0.0",
     "@eeacms/volto-eea-website-theme": "0.7.7",
     "@eeacms/volto-globalsearch": "0.1.7",
