--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
     "@eeacms/volto-description-block": "1.0.0",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.1",
     "@eeacms/volto-eea-kitkat": "*",
-    "@eeacms/volto-eea-website-policy": "1.0.0",
+    "@eeacms/volto-eea-website-policy": "*",
     "@eeacms/volto-eea-website-theme": "0.7.7",
     "@eeacms/volto-globalsearch": "0.1.7",
     "@eeacms/volto-hero-block": "0.2.0",
