--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "@eeacms/volto-datahub",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
-    "@eeacms/volto-eea-website-policy"
+    "@eeacms/volto-eea-website-policy",
+    "volto-subsites"
   ],
   "jest": {
     "modulePathIgnorePatterns": [
@@ -166,13 +167,13 @@
   },
   "dependencies": {
     "@eeacms/volto-call-to-action-block": "1.0.0",
+    "@eeacms/volto-datahub": "1.0.0",
     "@eeacms/volto-description-block": "1.0.0",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.2",
     "@eeacms/volto-eea-kitkat": "9.0.0",
     "@eeacms/volto-eea-website-policy": "1.0.1",
     "@eeacms/volto-eea-website-theme": "1.1.0",
     "@eeacms/volto-globalsearch": "1.0.0",
-    "@eeacms/volto-datahub": "1.0.0",
     "@eeacms/volto-hero-block": "1.0.0",
     "@eeacms/volto-quote-block": "1.0.0",
     "@eeacms/volto-slate-label": "0.4.3",
@@ -181,7 +182,8 @@
     "@eeacms/volto-timeline-block": "1.0.0",
     "@eeacms/volto-workflow-progress": "3.0.0",
     "@kitconcept/volto-blocks-grid": "5.1.1",
-    "@plone/volto": "16.0.0-alpha.46"
+    "@plone/volto": "16.0.0-alpha.46",
+    "volto-subsites": "4.0.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.0",
