--- a/package.json
+++ b/package.json
@@ -46,16 +46,7 @@
     "src/addons/*"
   ],
   "addons": [
-    "@kitconcept/volto-blocks-grid",
-    "@eeacms/volto-quote-block",
-    "@eeacms/volto-statistic-block",
-    "@eeacms/volto-tags-block",
-    "@eeacms/volto-timeline-block",
-    "@eeacms/volto-description-block",
-    "@eeacms/volto-call-to-action-block",
-    "@eeacms/volto-hero-block",
     "@eeacms/volto-eea-kitkat",
-    "@eeacms/volto-slate-label",
     "@eeacms/volto-workflow-progress",
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
@@ -165,22 +156,13 @@
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.2"
   },
   "dependencies": {
-    "@eeacms/volto-call-to-action-block": "1.0.0",
     "@eeacms/volto-datahub": "1.0.2",
-    "@eeacms/volto-description-block": "1.0.0",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.2",
-    "@eeacms/volto-eea-kitkat": "9.0.0",
+    "@eeacms/volto-eea-kitkat": "*",
     "@eeacms/volto-eea-website-policy": "1.0.1",
     "@eeacms/volto-eea-website-theme": "1.1.0",
     "@eeacms/volto-globalsearch": "1.0.0",
-    "@eeacms/volto-hero-block": "2.0.0",
-    "@eeacms/volto-quote-block": "1.0.0",
-    "@eeacms/volto-slate-label": "0.4.3",
-    "@eeacms/volto-statistic-block": "1.0.0",
-    "@eeacms/volto-tags-block": "1.0.0",
-    "@eeacms/volto-timeline-block": "1.0.0",
     "@eeacms/volto-workflow-progress": "3.0.0",
-    "@kitconcept/volto-blocks-grid": "5.1.1",
     "@plone/volto": "16.0.0-alpha.50"
   },
   "devDependencies": {
