Missing pin: @eeacms/volto-searchlib 0.4.2

--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "@eeacms/volto-eea-website-policy": "1.0.1",
     "@eeacms/volto-eea-website-theme": "1.1.0",
     "@eeacms/volto-globalsearch": "1.0.0",
+    "@eeacms/volto-searchlib": "0.4.2",
     "@eeacms/volto-workflow-progress": "3.0.0",
     "@kitconcept/volto-blocks-grid": "5.1.1",
     "@plone/volto": "16.0.0-alpha.46",
