--- a/package.json
+++ b/package.json
@@ -154,9 +154,11 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
+    "@eeacms/volto-listing-block": "2.0.0",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.3"
   },
   "dependencies": {
+    "@eeacms/volto-listing-block": "2.0.0",
     "@eeacms/volto-datahub": "1.0.2",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.3",
     "@eeacms/volto-eea-kitkat": "10.0.0",
