--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "1.1.0",
+  "version": "1.0.0.alpha.3",
   "scripts": {
     "start": "razzle start",
     "postinstall": "yarn omelette && yarn patches",
