--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,25 @@
-cypress
+# Folders
+.git
+.yarn/cache
+.storybook
 build
-eea-website-backend
+cache
 locales/*.json
 node_modules
 omelette
-npm-cache
-docker-compose.yml
-Dockerfile
-Jenkinsfile
-src/addons
-.git
-.storybook
+
+# Files
 .env
 *.log
+.dockerignore
+.editorconfig
+.eslintignore
+.eslintrc.js
+.gitignore
+.gitmodules
+.prettierignore
+bootstrap
+cypress*.json
+docker-compose.yml
+Jenkinsfile
+start_.sh
