--- a/package.json
+++ b/package.json
@@ -167,7 +167,7 @@
     "@eeacms/volto-searchlib": "0.4.2",
     "@eeacms/volto-workflow-progress": "3.0.1",
     "@kitconcept/volto-blocks-grid": "5.1.1",
-    "@plone/volto": "16.0.0-rc.3",
+    "@plone/volto": "16.0.0",
     "volto-subsites": "4.0.0"
   },
   "devDependencies": {
