--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
+    "@eeacms/volto-redmine-helpdesk"
     "volto-subsites"
   ],
   "jest": {
