--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "1.1.0",
+  "version": "1.0.0-alpha.11",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -153,11 +153,11 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.10"
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.11"
   },
   "dependencies": {
     "@eeacms/volto-datahub": "1.0.9",
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.10",
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.11",
     "@eeacms/volto-eea-kitkat": "10.5.1",
     "@eeacms/volto-eea-website-policy": "1.2.1",
     "@eeacms/volto-eea-website-theme": "1.5.1",
