--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "1.0.0-alpha.12.1",
+  "version": "1.0.0-alpha.12.2",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -154,9 +154,11 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.12"
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.12",
+    "@eeacms/volto-call-to-action-block": "3.0.1"
   },
   "dependencies": {
+    "@eeacms/volto-call-to-action-block": "3.0.1",
     "@eeacms/volto-datahub": "1.0.10",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.12",
     "@eeacms/volto-eea-kitkat": "10.6.0",
