--- a/package.json
+++ b/package.json
@@ -154,14 +154,12 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.13",
-    "@eeacms/volto-call-to-action-block": "3.0.1"
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.13"
   },
   "dependencies": {
-    "@eeacms/volto-call-to-action-block": "3.0.1",
     "@eeacms/volto-datahub": "1.0.10",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.13",
-    "@eeacms/volto-eea-kitkat": "10.6.0",
+    "@eeacms/volto-eea-kitkat": "10.6.1",
     "@eeacms/volto-eea-website-policy": "1.2.2",
     "@eeacms/volto-eea-website-theme": "1.6.2",
     "@eeacms/volto-globalsearch": "1.0.8",
