--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "addons": [
     "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-anchors",
     "@eeacms/volto-workflow-progress",
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
@@ -157,6 +158,7 @@
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.14"
   },
   "dependencies": {
+    "@eeacms/volto-anchors": "0.1.1",
     "@eeacms/volto-datahub": "1.0.10",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.14",
     "@eeacms/volto-eea-kitkat": "10.6.1",
