--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
     "@eeacms/volto-datahub",
+    "@eeacms/volto-widget-theme-picker",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
@@ -167,6 +168,7 @@
     "@eeacms/volto-globalsearch": "1.0.8",
     "@eeacms/volto-redmine-helpdesk": "0.1.7",
     "@eeacms/volto-searchlib": "0.4.18",
+    "@eeacms/volto-widget-theme-picker": "^1.0.1",
     "@eeacms/volto-workflow-progress": "3.0.1",
     "@kitconcept/volto-blocks-grid": "5.1.1",
     "@plone/volto": "16.9.0",
