--- a/package.json
+++ b/package.json
@@ -156,10 +156,12 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.15"
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.15",
+    "@eeacms/volto-block-style": "5.0.1"
   },
   "dependencies": {
     "@eeacms/volto-anchors": "0.1.4",
+    "@eeacms/volto-block-style": "5.0.1",
     "@eeacms/volto-datahub": "1.0.11",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.15",
     "@eeacms/volto-eea-kitkat": "11.0.0",
