--- a/package.json
+++ b/package.json
@@ -46,16 +46,14 @@
   ],
   "addons": [
     "@eeacms/volto-eea-kitkat",
-    "@eeacms/volto-anchors",
     "@eeacms/volto-workflow-progress",
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
     "@eeacms/volto-datahub",
-    "@eeacms/volto-widget-theme-picker",
+    "@eeacms/volto-redmine-helpdesk",
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
-    "@eeacms/volto-redmine-helpdesk",
     "volto-subsites"
   ],
   "jest": {
@@ -156,12 +154,9 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.15",
-    "@eeacms/volto-block-style": "5.0.1"
+    "@eeacms/volto-eea-design-system": "1.0.0-alpha.15"
   },
   "dependencies": {
-    "@eeacms/volto-anchors": "0.1.4",
-    "@eeacms/volto-block-style": "5.0.1",
     "@eeacms/volto-datahub": "1.0.11",
     "@eeacms/volto-eea-design-system": "1.0.0-alpha.15",
     "@eeacms/volto-eea-kitkat": "11.0.0",
@@ -170,7 +165,6 @@
     "@eeacms/volto-globalsearch": "1.0.9",
     "@eeacms/volto-redmine-helpdesk": "0.1.9",
     "@eeacms/volto-searchlib": "0.4.20",
-    "@eeacms/volto-widget-theme-picker": "^1.0.1",
     "@eeacms/volto-workflow-progress": "3.0.1",
     "@kitconcept/volto-blocks-grid": "5.1.1",
     "@plone/volto": "16.10.0",
