--- a/package.json
+++ b/package.json
@@ -154,11 +154,11 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.15"
+    "@eeacms/volto-eea-design-system": "1.0.0-beta.1"
   },
   "dependencies": {
     "@eeacms/volto-datahub": "1.0.12",
-    "@eeacms/volto-eea-design-system": "1.0.0-alpha.15",
+    "@eeacms/volto-eea-design-system": "1.0.0-beta.1",
     "@eeacms/volto-eea-kitkat": "12.0.0",
     "@eeacms/volto-eea-website-policy": "1.3.1",
     "@eeacms/volto-eea-website-theme": "1.8.0",
