--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "eea-website-frontend",
   "description": "EEA Main Website frontend (Plone 6)",
   "license": "MIT",
-  "version": "1.1.0",
+  "version": "1.0.0-beta.2",
   "scripts": {
     "start": "razzle start",
     "postinstall": "make omelette && make patches",
@@ -154,11 +154,11 @@
     "node": "^12 || ^14 || ^16"
   },
   "resolutions": {
-    "@eeacms/volto-eea-design-system": "1.0.0-beta.1"
+    "@eeacms/volto-eea-design-system": "1.0.0-beta.2"
   },
   "dependencies": {
     "@eeacms/volto-datahub": "1.0.13",
-    "@eeacms/volto-eea-design-system": "1.0.0-beta.1",
+    "@eeacms/volto-eea-design-system": "1.0.0-beta.2",
     "@eeacms/volto-eea-kitkat": "12.0.0",
     "@eeacms/volto-eea-website-policy": "1.3.1",
     "@eeacms/volto-eea-website-theme": "1.8.1",
