--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   ],
   "addons": [
     "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-editing-progress",
     "@eeacms/volto-workflow-progress",
+    "@eeacms/volto-block-data-figure",
     "@eeacms/volto-redmine-helpdesk",
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
@@ -163,11 +165,15 @@
     "@eeacms/volto-redmine-helpdesk": "0.1.11",
     "@eeacms/volto-searchlib": "0.5.3",
     "@eeacms/volto-workflow-progress": "3.1.0",
+    "@eeacms/volto-block-data-figure": "4.6.4",
+    "@eeacms/volto-editing-progress": "0.1.8",
     "@kitconcept/volto-blocks-grid": "5.1.1",
     "volto-subsites": "4.0.0"
   },
   "dependencies": {
+    "@eeacms/volto-block-data-figure": "4.6.4",
     "@eeacms/volto-datahub": "1.0.22",
+    "@eeacms/volto-editing-progress": "0.1.8",
     "@eeacms/volto-eea-design-system": "1.0.7",
     "@eeacms/volto-eea-kitkat": "15.3.0",
     "@eeacms/volto-eea-website-policy": "1.5.0",
