--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
+    "@eeacms/volto-forest-policy",
     "volto-subsites"
   ],
   "jest": {
@@ -173,6 +174,7 @@
     "@eeacms/volto-eea-kitkat": "15.3.0",
     "@eeacms/volto-eea-website-policy": "1.5.0",
     "@eeacms/volto-eea-website-theme": "1.14.0",
+    "@eeacms/volto-forest-policy": "workspace:*",
     "@eeacms/volto-globalsearch": "1.0.15",
     "@eeacms/volto-plotlycharts": "5.0.8",
     "@eeacms/volto-redmine-helpdesk": "0.1.11",
