--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@eeacms/volto-embed",
     "@eeacms/volto-datablocks",
     "@eeacms/volto-plotlycharts",
+    "@eeacms/volto-eea-map",
+    "@eeacms/volto-tableau",
     "@eeacms/volto-workflow-progress",
     "@eeacms/volto-redmine-helpdesk",
     "@eeacms/volto-searchlib",
@@ -178,6 +180,7 @@
     "@eeacms/volto-datahub": "1.0.24",
     "@eeacms/volto-eea-design-system": "1.13.2",
     "@eeacms/volto-eea-kitkat": "16.0.0",
+    "@eeacms/volto-eea-map": "0.1.35",
     "@eeacms/volto-eea-website-policy": "1.6.3",
     "@eeacms/volto-eea-website-theme": "1.17.2",
     "@eeacms/volto-embed": "5.0.4",
@@ -185,6 +188,7 @@
     "@eeacms/volto-plotlycharts": "6.2.2",
     "@eeacms/volto-redmine-helpdesk": "0.1.12",
     "@eeacms/volto-searchlib": "0.5.7",
+    "@eeacms/volto-tableau": "4.1.0",
     "@eeacms/volto-workflow-progress": "3.1.1",
     "@plone/volto": "16.20.8",
     "volto-subsites": "4.0.0"
