feat: IMSv4 migration to Plone 6 - refs #145772 (#109)

--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
   ],
   "addons": [
     "@eeacms/volto-eea-kitkat",
+    "@eeacms/volto-editing-progress",
     "@eeacms/volto-embed",
     "@eeacms/volto-datablocks",
     "@eeacms/volto-plotlycharts",
     "@eeacms/volto-eea-map",
     "@eeacms/volto-tableau",
     "@eeacms/volto-workflow-progress",
+    "@eeacms/volto-block-data-figure",
     "@eeacms/volto-redmine-helpdesk",
     "@eeacms/volto-searchlib",
     "@eeacms/volto-globalsearch",
@@ -170,14 +172,18 @@
     "@eeacms/volto-redmine-helpdesk": "0.1.12",
     "@eeacms/volto-searchlib": "0.5.7",
     "@eeacms/volto-workflow-progress": "3.1.1",
+    "@eeacms/volto-block-data-figure": "4.6.4",
+    "@eeacms/volto-editing-progress": "0.1.8",
     "volto-subsites": "4.0.0",
     "react-countup/countup.js": "2.5.0",
     "react-colorscales": "github:eea/react-colorscales#1.0.2",
     "d3-array": "^2.12.1"
   },
   "dependencies": {
+    "@eeacms/volto-block-data-figure": "4.6.4",
     "@eeacms/volto-datablocks": "5.0.1",
     "@eeacms/volto-datahub": "1.0.24",
+    "@eeacms/volto-editing-progress": "0.1.8",
     "@eeacms/volto-eea-design-system": "1.13.2",
     "@eeacms/volto-eea-kitkat": "16.0.0",
     "@eeacms/volto-eea-map": "0.1.35",
