chore: Add @eeacms/countup to mrs.developer

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -153,6 +153,9 @@
             ],
             "@eeacms/volto-tableau": [
                 "addons/volto-tableau/src"
+            ],
+            "@eeacms/countup": [
+                "addons/countup/src"
             ]
         },
         "baseUrl": "src"
