--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@eeacms/volto-eea-design-system",
     "@eeacms/volto-eea-website-theme",
     "@eeacms/volto-eea-website-policy",
+    "@eeacms/volto-citation",
     "volto-subsites"
   ],
   "jest": {
@@ -176,6 +177,7 @@
     "@eeacms/volto-workflow-progress": "3.1.1",
     "@eeacms/volto-block-data-figure": "5.0.1",
     "@eeacms/volto-editing-progress": "0.2.2",
+    "@eeacms/volto-citation": "0.1.2",
     "volto-subsites": "4.0.0",
     "react-colorscales": "github:eea/react-colorscales#1.0.2",
     "d3-array": "^2.12.1"
@@ -197,6 +199,7 @@
     "@eeacms/volto-searchlib": "0.6.0",
     "@eeacms/volto-tableau": "5.0.0",
     "@eeacms/volto-workflow-progress": "3.1.1",
+    "@eeacms/volto-citation": "0.1.2",
     "@plone/volto": "16.22.0",
     "volto-subsites": "4.0.0"
   },
