Add volto-toolbar-actions to dev environment

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -159,6 +159,9 @@
             ],
             "@eeacms/countup": [
                 "addons/countup/src"
+            ],
+            "@eeacms/volto-toolbar-actions": [
+                "addons/volto-toolbar-actions/src"
             ]
         },
         "baseUrl": "src"
