--- a/jsconfig.json
+++ b/jsconfig.json
@@ -165,5 +165,16 @@
             ]
         },
         "baseUrl": "src"
-    }
+    },
+
+  "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "build",
+    "public",
+    "coverage",
+    "src/**/*.test.{js,jsx,ts,tsx}",
+    "src/**/*.spec.{js,jsx,ts,tsx}",
+    "src/**/*.stories.{js,jsx,ts,tsx}"
+  ]
 }
