updated jsconfig.js with entries found in tsconfig.js from the app generator

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,19 @@
 {
     "compilerOptions": {
+        "target": "ESNext",
+        "lib": ["DOM", "DOM.Iterable", "ESNext"],
+        "module": "commonjs",
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "moduleResolution": "Node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react-jsx",
         "paths": {
             "@eeacms/volto-matomo": [
                 "addons/volto-matomo/src"
@@ -162,7 +176,9 @@
             ],
             "@eeacms/volto-toolbar-actions": [
                 "addons/volto-toolbar-actions/src"
-            ]
+            ],
+            "@plone/volto/*": ["../node_modules/@plone/volto/src/*", "../node_modules/@plone/volto/types/*"],
+            "@root/*": ["."]
         },
         "baseUrl": "src"
     },
