feat: Add volto-controlpanel to mrs.dev

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -162,6 +162,9 @@
             ],
             "@eeacms/volto-toolbar-actions": [
                 "addons/volto-toolbar-actions/src"
+            ],
+            "@eeacms/volto-controlpanel": [
+                "addons/volto-controlpanel/src"
             ]
         },
         "baseUrl": "src"
