--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@eeacms/volto-editing-progress",
     "@eeacms/volto-workflow-progress",
     "@eeacms/volto-embed",
+    "@eeacms/volto-embed-static-content",
     "@eeacms/volto-datablocks",
     "@eeacms/volto-plotlycharts",
     "@eeacms/volto-eea-map",
@@ -167,18 +168,19 @@
   },
   "resolutions": {
     "@eeacms/volto-embed": "10.0.0",
+    "@eeacms/volto-embed-static-content": "0.2.0",
     "@eeacms/volto-datablocks": "7.0.0",
     "@eeacms/volto-datahub": "2.0.0",
-    "@eeacms/volto-eea-design-system": "1.23.6",
+    "@eeacms/volto-eea-design-system": "1.23.7",
     "@eeacms/volto-eea-kitkat": "25.0.0",
     "@eeacms/volto-eea-map": "4.0.0",
     "@eeacms/volto-eea-website-policy": "2.0.0",
     "@eeacms/volto-eea-website-theme": "1.33.2",
     "@eeacms/volto-globalsearch": "2.0.0",
-    "@eeacms/volto-plotlycharts": "10.0.0",
+    "@eeacms/volto-plotlycharts": "10.0.1",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
     "@eeacms/volto-searchlib": "1.0.0",
-    "@eeacms/volto-tableau": "8.0.0",
+    "@eeacms/volto-tableau": "8.0.1",
     "@eeacms/volto-workflow-progress": "5.0.0",
     "@eeacms/volto-block-data-figure": "8.0.0",
     "@eeacms/volto-editing-progress": "1.0.0",
@@ -195,17 +197,18 @@
     "@eeacms/volto-datablocks": "7.0.0",
     "@eeacms/volto-datahub": "2.0.0",
     "@eeacms/volto-editing-progress": "1.0.0",
-    "@eeacms/volto-eea-design-system": "1.23.6",
+    "@eeacms/volto-eea-design-system": "1.23.7",
     "@eeacms/volto-eea-kitkat": "25.0.0",
     "@eeacms/volto-eea-map": "4.0.0",
     "@eeacms/volto-eea-website-policy": "2.0.0",
     "@eeacms/volto-eea-website-theme": "1.33.2",
     "@eeacms/volto-embed": "10.0.0",
+    "@eeacms/volto-embed-static-content": "0.2.0",
     "@eeacms/volto-globalsearch": "2.0.0",
-    "@eeacms/volto-plotlycharts": "10.0.0",
+    "@eeacms/volto-plotlycharts": "10.0.1",
     "@eeacms/volto-redmine-helpdesk": "1.0.0",
     "@eeacms/volto-searchlib": "1.0.0",
-    "@eeacms/volto-tableau": "8.0.0",
+    "@eeacms/volto-tableau": "8.0.1",
     "@eeacms/volto-workflow-progress": "5.0.0",
     "@plone/volto": "17.15.6",
     "volto-subsites": "4.0.0"
