pin packages to resolutions to get rid of extra copies within client.js bundle
- patch react-responsive-tabs to avoid calling react-resize-detector with patch
  since 7.x.x no longer bundles patches and we only target modern browsers.
  This way we can have a resolution pin for avoid double library within our client.js
  bundle

--- a/.gitignore
+++ b/.gitignore
@@ -86,9 +86,10 @@ src/addons/*
 
 # yarn 3
 .pnp.*
-.yarn/*
+.yarn/cache
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
+
 !.yarn/sdks
 !.yarn/versions
