--- a/package.json
+++ b/package.json
@@ -189,6 +189,19 @@
     "node": "^18 || ^20"
   },
   "resolutions": {
+    "classnames": "2.5.1",
+    "dnd-core": "11.1.3",
+    "hoist-non-react-statics": "3.3.2",
+    "fast-deep-equal": "^3.1.3",
+    "immer": "^9.0.6",
+    "is-hotkey": "0.2.0",
+    "memoize-one": "^6.0.0",
+    "performance-now": "^2.1.0",
+    "prop-types": "15.7.2",
+    "punycode": "^1.4.1",
+    "react-fast-compare": "2.0.4",
+    "react-portal": "4.2.1",
+    "react-select": "4.3.1",
     "@elastic/search-ui": "1.21.2",
     "@eeacms/volto-embed": "10.0.0",
     "@eeacms/volto-embed-static-content": "0.2.4",
@@ -210,12 +223,16 @@
     "@eeacms/volto-citation": "1.1.0",
     "@plone-collective/volto-authomatic": "2.0.1",
     "volto-subsites": "4.0.0",
+    "@babel/runtime": "^7.20.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-resize-detector": "7.1.2",
+    "redux": "4.1.0",
     "react-colorscales": "github:eea/react-colorscales#1.0.2",
     "d3-array": "^2.12.1",
     "react-error-overlay": "6.0.9",
-    "eslint-plugin-jsx-a11y": "6.7.1"
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "react-responsive-tabs@4.4.3": "patch:react-responsive-tabs@npm:4.4.3#./.yarn/patches/react-responsive-tabs-npm-4.4.3-66aeb85dc7.patch"
   },
   "dependencies": {
     "@eeacms/volto-block-data-figure": "8.1.0",
